--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Unity C_ Code.sln"
+    "dotnet.defaultSolution": "Unity-C--Code.sln"
 }
